--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.2",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@prisma/client": "^5.7.1",
